# arm9launcher

./: .gitignore  .gitmodules  COPYING.txt  Makefile.am  README  arm9launcher.cfg  common.mk  configure.ac  cppcheck.cppcheck
ext/: Makefile.am
src/: Makefile.am  a9l_config.c  a9l_config.h  a_start.s  arm9launcher.c  arm9loaderhax.ld  bootloader.c  bootloader.ld  elf.c  elf.h  loader.c  main.c  start.s
